--- a/css/style.css
+++ b/css/style.css
@@ -80,12 +80,16 @@ section {
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  height: 100%;
 }
 
 .menu_container {
   display: flex;
+  height: 100%;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
+  color: var(--color-main);
 }
 
 .menu_container li {
@@ -95,6 +99,51 @@ section {
   font-size: 16px;
   font-weight: 400;
   margin-left: 44px;
+}
+
+.category__desk {
+  display: flex;
+  align-items: center;
+  column-gap: 3px;
+  height: 100%;
+}
+
+.category__desk:hover > .category__desk__sub__list {
+  display: flex;
+}
+.category__desk__sub__list {
+  position: absolute;
+  left: 0;
+  top: 117px;
+
+  width: 100%;
+  height: 286px;
+
+  display: none;
+  justify-content: space-around;
+
+  background-color: var(--color-header);
+}
+
+.category__desk__sub__list:hover {
+  display: flex;
+}
+
+.category__desk__sub__container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.category__desk__sub__title {
+  font-weight: 700;
+  font-size: 1.25rem;
+}
+
+.category__desk__sub__item {
+  font-size: 1rem;
+  font-weight: 400;
+  cursor: pointer;
 }
 
 .header_icons {
